Made forgot password routes.
